plugins {
    id 'java'
}

sourceCompatibility = '1.14'
targetCompatibility = '1.14'

apply plugin: 'java'


compileJava {
    options.compilerArgs += ["--enable-preview"]
}

test {
    jvmArgs '--enable-preview'
}